--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <div class="menu">
                     <a href="index.html" class="current"><img src="https://framerusercontent.com/images/duRtoIIUg5pJHSrEAoXb5RLVCc.svg" alt="" ></a>
                     <div class="menuList">
-                        <li class="menu-item"><a href="#service" >services</a></li>
+                        <li class="menu-item menuA"><a href="#service" >services</a></li>
                         <li class="menu-item"><a href="project.html" >projects</a></li>
-                        <li class="menu-item"><a href="#testimonial" >testimonials</li>
+                        <li class="menu-item menuA"><a href="#testimonial" >testimonials</li>
                         <li class="menu-item navBtn"><a href="contact.html" ><i class="ri-sparkling-line"></i>contact</li>  
                     </div>
                 </div>
@@ -153,7 +153,7 @@
     ==============================main start here========================
     ====================================================================== -->
 
-    <main>
+    <main id="main">
         <section id="about">
           <div class="about-us">
               <span class="dot-txt"><i class="fa-regular fa-circle-dot"></i> expert designer</span>
