--- a/project.html
+++ b/project.html
@@ -65,9 +65,9 @@
                 <div class="menu">
                     <a href="index.html" class="current"><img src="https://framerusercontent.com/images/duRtoIIUg5pJHSrEAoXb5RLVCc.svg" alt="" ></a>
                     <div class="menuList">
-                        <li class="menu-item"><a href="index.html" >services</a></li>
+                        <li class="menu-item menuA"><a href="index.html" >services</a></li>
                         <li class="menu-item"><a href="project.html" >projects</a></li>
-                        <li class="menu-item"><a href="#testimonial" >testimonials</li>
+                        <li class="menu-item menuA"><a href="#testimonial" >testimonials</li>
                         <li class="menu-item navBtn"><a href="contact.html" ><i class="ri-sparkling-line"></i>contact</li>  
                     </div>
                 </div>
